<resources>
    <string name="app_name">ACE Notification</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_hue_bridge_search">Hue Bridge Search</string>

    <string name="no_bridge">No Bridge Found.   Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="btn_random">Random Lights</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="loading">Loading ...</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="txt_click_random_button">Click the Random Lights Button to set your lamps to random colours.</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press.</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Please press the link button on the bridge.</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app.</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_hue_push_link">Push Link</string>
    <string name="title_activity_more_lights">More Lights?</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_next">Next</string>
    <string name="btn_save">Save</string>
    <string name="welcome">Welcome!</string>
    <string name="btn_takemehome">Take Me Home</string>
    <string name="more_lights">Below are your currently connected lights. Do you want to add more?</string>
    <string name="title_activity_configure_lights">Configure Lights</string>
    <string name="configure_lights">You may edit or rename your light(s) below.</string>
    <string name="title_activity_add_light">Add Light</string>
    <string name="add_light_instruction">Make sure the new lights are on and tap search.</string>
    <string name="btn_search">Search</string>
    <string name="title_activity_hue_default_values">Setting Default Values</string>
    <string name="default_values">
    The next step is to set the default values for your Hue system.</string>
    <string name="default_values_more">The chosen light(s) and duration will be fixed for all calls. However, the flash
        pattern, flash rate, and color can be customized for each contact.</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="missed_call">Missed Call</string>
    <string name="light_choice">Light(s)</string>
    <string name="duration">Duration for Missed Calls (in minutes)</string>
    <string name="flash_pattern">Flash Pattern for Incoming Calls \n (a preview will be shown)</string>
    <string name="flash_rate">Flash Rate for Incoming Calls \n (in milliseconds)</string>
    <string name="color">Color \n (a preview will be shown)</string>
    <string-array name="duration_list">
        <item>--</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>Always On</item>
    </string-array>
    <string-array name="flash_pattern_list">
        <item>--</item>
        <item>Slow</item>
        <item>Heartbeat</item>
        <item>Panic</item>
    </string-array>
    <string-array name="flash_rate_list">
        <item>--</item>
        <item>.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
    </string-array>
    <string-array name="color_list">
        <item>--</item>
        <item>warm white</item>
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>pink</item>
    </string-array>
    <string name="title_activity_contact_list_default">Assigning Default Values</string>
    <string name="contact_default">"Your current contact list has been retrieved. Do you want those people to be assigned the default values?"</string>
    <string name="contact_default_more">"If you choose no, you will not be notified of incoming and/or missed calls by these people. These settings can be modified later."</string>
    <string name="title_activity_completed_setup">Completed Setup</string>
    <string name="congratulations">Congratulations! You have set up your Hue system.</string>
    <string name="simulate_call">Simulate an incoming call.</string>
    <string name="home">Home</string>
    <string name="lights">Lights</string>
    <string name="settings">Settings</string>
    <string name="title_activity_lights">Lights</string>
    <string name="title_activity_settings">Settings</string>
    <string name="my_contacts">My Contact</string>
    <string name="my_lights">My Lights</string>
    <string name="my_devices">My Devices</string>
    <string name="my_notifications">My Notifications</string>
    <string name="title_activity_my_contacts">My Contacts</string>
    <string name="new_contact">+ new contact</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="notifications">Notifications</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_my_lights">My Lights</string>
    <string name="new_light">+ new light</string>
    <string name="title_activity_add_light_setup">Add Light</string>
    <string name="title_activity_on_call">On Call</string>
    <string name="btn_hang_up">Hang Up</string>
    <string name="use_default">set default values</string>
    <string name="title_activity_set_hue_default_values">My Notifications</string>
    <string name="set_default_values">Set your preferred default values below.</string>
    <string name="title_activity_wink_authentication">Wink Authentication Activity</string>
    <string name="username">username:</string>
    <string name="password">password:</string>
    <string name="btn_sign_up">sign up</string>
    <string name="btn_log_in">log in</string>
    <string name="title_activity_wink_log_in">Wink Log In</string>
    <string name="title_activity_wink_sign_up">Wink Sign Up</string>

    <string name="hello_world">Hello world!</string>


</resources>
